--- a/ERecruteApp-front/src/app/sidebar/sidebar.component.html
+++ b/ERecruteApp-front/src/app/sidebar/sidebar.component.html
@@ -31,8 +31,8 @@
         <li *ngIf="authority === 'admin'" class="xn-openable">
             <a href="#"><span class="fa fa-files-o"></span> <span class="xn-text">Utilisateurs</span></a>
             <ul>
-                <li><a href="admin">Liste Utilisateurs</a></li>
-                <li><a routerLink="nv-utilisateur">Nouveau Utilisateur</a></li>
+                <li><a href="utilisateurs">Liste Utilisateurs</a></li>
+                <li><a routerLink="nv-user">Nouveau Utilisateur</a></li>
             </ul>
         </li>
         <li class="xn-openable">
