--- a/ERecruteApp-front/src/app/competence/competence.component.html
+++ b/ERecruteApp-front/src/app/competence/competence.component.html
@@ -22,12 +22,16 @@
     <tbody>
         <tr *ngFor="let competence of competences">
             <td>{{competence.codeCompetance}}</td>
-            <td>
+            <td *ngIf="mode==competence.codeCompetance">
             <input required ngModel value={{competence.nomCompetence}} name="nomCompetence" class="form-control" [(ngModel)]="competence.nomCompetence">
             </td>            
+            <td *ngIf="mode!=competence.codeCompetance">
+                {{competence.nomCompetence}}
+            </td>
             <td>
                     <button class="btn btn-danger" (click)="deleteCompetence(competence)"> Delete competence</button> 
-                    <button class="btn btn-success" (click)="editCompetence(competence)"> Edit competence</button>
+                    <button *ngIf="mode!=competence.codeCompetance" class="btn btn-success" (click)="editCompetence(competence)"> Edit competence</button>
+                    <button *ngIf="mode==competence.codeCompetance" class="btn btn-success" (click)="updateCompetence(competence)"> Update competence</button>
             </td>
         </tr>
     </tbody>
