--- a/ERecruteApp-front/src/app/utilisateurs/utilisateurs.component.html
+++ b/ERecruteApp-front/src/app/utilisateurs/utilisateurs.component.html
@@ -37,14 +37,30 @@
                           <tr *ngFor="let utilisateur of utilisateurs">
                               <td>{{utilisateur.name}}</td>
                               <td>{{utilisateur.email}}</td>
-                              <td >
+                              <td *ngIf="mode!=utilisateur.id">
                                   <p *ngFor="let role of utilisateur.roles">
                                       {{role.name}}
                                   </p>
                                 </td>
+                              <td *ngIf="mode==utilisateur.id">
+                                    <ng-multiselect-dropdown
+                                    [placeholder]="'Choisir rôle'"
+                                    [data]="dropdownList"
+                                    name="role"
+                                    #role="ngModel"
+                                    [(ngModel)]="selectedItems"
+                                    [settings]="dropdownSettings"
+                                    (onSelect)="onItemSelect($event)"
+                                    (onSelectAll)="onSelectAll($event)"
+                                  >
+                                  </ng-multiselect-dropdown>
+                              </td>
                               <td>
-                                  <button class="btn btn-default btn-rounded btn-sm"
-                                  (click)="editUser(utilisateur)">
+                                  <button *ngIf="mode==utilisateur.id" class="btn btn-default btn-rounded btn-sm"
+                                  (click)="updateUser(utilisateur,selectedItems)">
+                                  <span class="fa fa-pencil"></span></button>
+                                  <button *ngIf="mode!=utilisateur.id" class="btn btn-default btn-rounded btn-sm"
+                                  (click)="editUser(utilisateur,utilisateur.roles)">
                                   <span class="fa fa-pencil"></span></button>
                                   <button class="btn btn-danger btn-rounded btn-sm"
                                           mwlConfirmationPopover
