--- a/ERecruteApp-front/src/app/utilisateurs/utilisateurs.component.html
+++ b/ERecruteApp-front/src/app/utilisateurs/utilisateurs.component.html
@@ -58,7 +58,7 @@
                               <td>
                                   <button *ngIf="mode==utilisateur.id" class="btn btn-default btn-rounded btn-sm"
                                   (click)="updateUser(utilisateur,selectedItems)">
-                                  <span class="fa fa-pencil"></span></button>
+                                  <span class="fa fa-save"></span></button>
                                   <button *ngIf="mode!=utilisateur.id" class="btn btn-default btn-rounded btn-sm"
                                   (click)="editUser(utilisateur,utilisateur.roles)">
                                   <span class="fa fa-pencil"></span></button>
