--- a/ERecruteApp-front/src/app/cv/cv.component.html
+++ b/ERecruteApp-front/src/app/cv/cv.component.html
@@ -11,14 +11,14 @@
                     <!-- START CONTENT FRAME TOP -->
                     <div class="content-frame-top">                        
                         <div class="page-title">                    
-                            <h2><span class="fa fa-arrow-circle-o-left"></span> Tasks</h2>
+                            <h2><span class="fa fa-arrow-circle-o-left"></span> Création CV</h2>
                         </div>                                                
                         <div class="pull-right">
                             <button class="btn btn-default content-frame-left-toggle"><span class="fa fa-bars"></span></button>
                         </div>                                
                         <div class="pull-right" style="width: 100px; margin-right: 5px;">
                             <select class="form-control select">
-                                <option>All</option>                                
+                                <option>défault</option>                                
                                 <option>Work</option>
                                 <option>Home</option>
                                 <option>Friends</option>
