--- a/ERecruteApp-front/src/app/app.component.html
+++ b/ERecruteApp-front/src/app/app.component.html
@@ -25,7 +25,7 @@
     <!-- PAGE CONTENT -->
     <div class="page-content">
       <!-- START X-NAVIGATION VERTICAL -->
-      <ul class="x-navigation x-navigation-horizontal x-navigation-panel">
+      <ul id="impression" class="x-navigation x-navigation-horizontal x-navigation-panel">
           <!-- TOGGLE NAVIGATION -->
           <li class="xn-icon-button">
               <a href="#" class="x-navigation-minimize"><span class="fa fa-dedent"></span></a>
