Revert "Ajout Profil"
This reverts commit 0d997d9e1539541b13df4db78c47426e0fc8ff86.

--- a/ERecruteApp-front/src/app/sidebar/sidebar.component.html
+++ b/ERecruteApp-front/src/app/sidebar/sidebar.component.html
@@ -51,7 +51,7 @@
                 <a href="#"><span class="fa fa-files-o"></span> <span class="xn-text">Profils</span></a>
                 <ul>
                     <li><a href="profils.html">Liste Profils</a></li>
-                    <li><a routerLink="/addProfil">Nouveau Profil</a></li>
+                    <li><a href="nv-profil.html">Nouveau Profil</a></li>
                     <li><a href="importer-profiles.html">Importer Profils</a></li>
                 </ul>
         </li>
