--- a/ERecruteApp-front/src/app/sidebar/sidebar.component.html
+++ b/ERecruteApp-front/src/app/sidebar/sidebar.component.html
@@ -8,11 +8,11 @@
         </li>
         <li class="xn-profile">
             <a href="#" class="profile-mini">
-                <img src="../../assets/assets/images/users/user-profil.jpg" alt="User profil"/>
+                <img src="assets/assets/images/users/user-profil.png" alt="User profil"/>
             </a>
             <div class="profile">
                 <div class="profile-image">
-                    <img src="../../assets/assets/images/users/user-profil.png" alt="User profil"/>
+                    <img src="assets/assets/images/users/user-profil.png" alt="User profil"/>
                 </div>
                 <div class="profile-data">
                     <div class="profile-data-name">{{info.username}}</div>
