--- a/ERecruteApp-front/src/app/cvtheque/cvtheque.component.html
+++ b/ERecruteApp-front/src/app/cvtheque/cvtheque.component.html
@@ -60,6 +60,8 @@
                             <div class="col-md-6 col-xs-12">
                                 <input required ngModel [(ngModel)]="cv.posteDesire" name="posteDesire" type="text"
                                     class="form-control" placeholder="exemples: Chef de produit ..." />
+                                <input ngModel [(ngModel)]="cv.profil" name="profil" type="text"
+                                    value="1" />
                             </div>
                         </div>
                     </div>
