commit bach  npulli

--- a/ERecruteApp-front/src/app/sidebar/sidebar.component.html
+++ b/ERecruteApp-front/src/app/sidebar/sidebar.component.html
@@ -50,7 +50,7 @@
         <li class="xn-openable">
                 <a href="#"><span class="fa fa-files-o"></span> <span class="xn-text">Profils</span></a>
                 <ul>
-                    <li><a href="profils.html">Liste Profils</a></li>
+                    <li><a routerLink="/profil">Liste Profils</a></li>
                     <li><a routerLink="/addProfil">Nouveau Profil</a></li>
                     <li><a href="importer-profiles.html">Importer Profils</a></li>
                 </ul>
