--- a/ERecruteApp-front/src/app/profil/profil.component.html
+++ b/ERecruteApp-front/src/app/profil/profil.component.html
@@ -21,7 +21,7 @@
                                     </div>
                                 </div>
                                 <div class="col-md-4">
-                                    <button class="btn btn-success btn-block"><span class="fa fa-plus"></span> Add new contact</button>
+                                    <button routerLink="/nv-user" class="btn btn-success btn-block"><span class="fa fa-plus"></span> Add new profil</button>
                                 </div>
                             </div>
                         </form>                                    
@@ -31,16 +31,16 @@
             </div>
         </div>
         
-        <div class="row">
+        <div class="row" *ngFor="let profil of Profil">
             <div class="col-md-3">
                 <!-- CONTACT ITEM -->
                 <div class="panel panel-default">
                     <div class="panel-body profile">
                         <div class="profile-image">
-                            <img src="assets/images/users/user3.jpg" alt="Nadia Ali"/>
+                            <img src="assets/images/users/user3.jpg" alt="{{profil.nom}} {{profil.prenom}}"/>
                         </div>
                         <div class="profile-data">
-                            <div class="profile-data-name">Nadia Ali</div>
+                            <div class="profile-data-name">{{profil.nom}} {{profil.prenom}}</div>
                             <div class="profile-data-title">Singer-Songwriter</div>
                         </div>
                         <div class="profile-controls">
@@ -50,196 +50,14 @@
                     </div>                                
                     <div class="panel-body">                                    
                         <div class="contact-info">
-                            <p><small>Mobile</small><br/>(555) 555-55-55</p>
-                            <p><small>Email</small><br/>nadiaali@domain.com</p>
-                            <p><small>Address</small><br/>123 45 Street San Francisco, CA, USA</p>                                   
+                            <p><small>Mobile</small><br/>{{profil.tel}}</p>
+                            <p><small>Email</small><br/>{{profil.email}}</p>
+                            <p><small>Address</small><br/>{{profil.adresse}}</p>                                   
                         </div>
                     </div>                                
                 </div>
                 <!-- END CONTACT ITEM -->
-            </div>
-            <div class="col-md-3">
-                <!-- CONTACT ITEM -->
-                <div class="panel panel-default">
-                    <div class="panel-body profile">
-                        <div class="profile-image">
-                            <img src="assets/images/users/user.jpg" alt="Dmitry Ivaniuk"/>
-                        </div>
-                        <div class="profile-data">
-                            <div class="profile-data-name">Dmitry Ivaniuk</div>
-                            <div class="profile-data-title">Web Developer / UI/UX Designer</div>
-                        </div>
-                        <div class="profile-controls">
-                            <a href="#" class="profile-control-left"><span class="fa fa-info"></span></a>
-                            <a href="#" class="profile-control-right"><span class="fa fa-phone"></span></a>
-                        </div>
-                    </div>                                
-                    <div class="panel-body">                                    
-                        <div class="contact-info">
-                            <p><small>Mobile</small><br/>(333) 333-33-22</p>
-                            <p><small>Email</small><br/>dmitry@domain.com</p>                                        
-                            <p><small>Address</small><br/>123 45 Street San Francisco, CA, USA</p>                                   
-                        </div>
-                    </div>                                
-                </div>
-                <!-- END CONTACT ITEM -->
-            </div>
-            <div class="col-md-3">
-                <!-- CONTACT ITEM -->
-                <div class="panel panel-default">
-                    <div class="panel-body profile">
-                        <div class="profile-image">
-                            <img src="assets/images/users/user2.jpg" alt="John Doe"/>
-                        </div>
-                        <div class="profile-data">
-                            <div class="profile-data-name">John Doe</div>
-                            <div class="profile-data-title">Web Developer/Designer</div>
-                        </div>
-                        <div class="profile-controls">
-                            <a href="#" class="profile-control-left"><span class="fa fa-info"></span></a>
-                            <a href="#" class="profile-control-right"><span class="fa fa-phone"></span></a>
-                        </div>
-                    </div>                                
-                    <div class="panel-body">                                    
-                        <div class="contact-info">
-                            <p><small>Mobile</small><br/>(234) 567-89-12</p>
-                            <p><small>Email</small><br/>john@domain.com</p>
-                            <p><small>Address</small><br/>123 45 Street San Francisco, CA, USA</p>                                   
-                        </div>
-                    </div>                                
-                </div>
-                <!-- END CONTACT ITEM -->
-            </div>
-            <div class="col-md-3">
-                <!-- CONTACT ITEM -->
-                <div class="panel panel-default">
-                    <div class="panel-body profile">
-                        <div class="profile-image">
-                            <img src="assets/images/users/user4.jpg" alt="Brad Pitt"/>
-                        </div>
-                        <div class="profile-data">
-                            <div class="profile-data-name">Brad Pitt</div>
-                            <div class="profile-data-title">Actor and Film Producer</div>
-                        </div>
-                        <div class="profile-controls">
-                            <a href="#" class="profile-control-left"><span class="fa fa-info"></span></a>
-                            <a href="#" class="profile-control-right"><span class="fa fa-phone"></span></a>
-                        </div>
-                    </div>                                
-                    <div class="panel-body">                                    
-                        <div class="contact-info">
-                            <p><small>Mobile</small><br/>(321) 777-55-11</p>
-                            <p><small>Email</small><br/>brad@domain.com</p>
-                            <p><small>Address</small><br/>123 45 Street San Francisco, CA, USA</p>                                   
-                        </div>
-                    </div>                                
-                </div>
-                <!-- END CONTACT ITEM -->
-            </div>
-            <div class="col-md-3">
-                <!-- CONTACT ITEM -->
-                <div class="panel panel-default">
-                    <div class="panel-body profile">
-                        <div class="profile-image">
-                            <img src="assets/images/users/user5.jpg" alt="John Travolta"/>
-                        </div>
-                        <div class="profile-data">
-                            <div class="profile-data-name">John Travolta</div>
-                            <div class="profile-data-title">Actor</div>
-                        </div>
-                        <div class="profile-controls">
-                            <a href="#" class="profile-control-left"><span class="fa fa-info"></span></a>
-                            <a href="#" class="profile-control-right"><span class="fa fa-phone"></span></a>
-                        </div>
-                    </div>                                
-                    <div class="panel-body">                                    
-                        <div class="contact-info">
-                            <p><small>Mobile</small><br/>(111) 222-33-78</p>
-                            <p><small>Email</small><br/>travolta@domain.com</p>
-                            <p><small>Address</small><br/>123 45 Street San Francisco, CA, USA</p>                                   
-                        </div>
-                    </div>                                
-                </div>
-                <!-- END CONTACT ITEM -->
-            </div>
-            <div class="col-md-3">
-                <!-- CONTACT ITEM -->
-                <div class="panel panel-default">
-                    <div class="panel-body profile">
-                        <div class="profile-image">
-                            <img src="assets/images/users/user6.jpg" alt="Darth Vader"/>
-                        </div>
-                        <div class="profile-data">
-                            <div class="profile-data-name">Darth Vader</div>
-                            <div class="profile-data-title">Cyborg</div>
-                        </div>
-                        <div class="profile-controls">
-                            <a href="#" class="profile-control-left"><span class="fa fa-info"></span></a>
-                            <a href="#" class="profile-control-right"><span class="fa fa-phone"></span></a>
-                        </div>
-                    </div>                                
-                    <div class="panel-body">                                    
-                        <div class="contact-info">
-                            <p><small>Mobile</small><br/>(000) 000-00-01</p>
-                            <p><small>Email</small><br/>vader@domain.com</p>
-                            <p><small>Address</small><br/>Somewhere deep in space</p>                                   
-                        </div>
-                    </div>                                
-                </div>
-                <!-- END CONTACT ITEM -->
-            </div>
-            <div class="col-md-3">
-                <!-- CONTACT ITEM -->
-                <div class="panel panel-default">
-                    <div class="panel-body profile">
-                        <div class="profile-image">
-                            <img src="assets/images/users/user7.jpg" alt="Samuel Leroy Jackson"/>
-                        </div>
-                        <div class="profile-data">
-                            <div class="profile-data-name">Samuel Leroy Jackson</div>
-                            <div class="profile-data-title">Actor and film producer</div>
-                        </div>
-                        <div class="profile-controls">
-                            <a href="#" class="profile-control-left"><span class="fa fa-info"></span></a>
-                            <a href="#" class="profile-control-right"><span class="fa fa-phone"></span></a>
-                        </div>
-                    </div>                                
-                    <div class="panel-body">                                    
-                        <div class="contact-info">
-                            <p><small>Mobile</small><br/>(552) 221-23-25</p>
-                            <p><small>Email</small><br/>samuel@domain.com</p>
-                            <p><small>Address</small><br/>123 45 Street San Francisco, CA, USA</p>                                   
-                        </div>
-                    </div>                                
-                </div>
-                <!-- END CONTACT ITEM -->
-            </div>
-            <div class="col-md-3">
-                <!-- CONTACT ITEM -->
-                <div class="panel panel-default">
-                    <div class="panel-body profile">
-                        <div class="profile-image">
-                            <img src="assets/images/users/no-image.jpg" alt="Samuel Leroy Jackson"/>
-                        </div>
-                        <div class="profile-data">
-                            <div class="profile-data-name">Alex Sonar</div>
-                            <div class="profile-data-title">Designer</div>
-                        </div>
-                        <div class="profile-controls">
-                            <a href="pages-profile.html" class="profile-control-left"><span class="fa fa-info"></span></a>
-                            <a href="#" class="profile-control-right"><span class="fa fa-phone"></span></a>
-                        </div>
-                    </div>                                
-                    <div class="panel-body">                                    
-                        <div class="contact-info">
-                            <p><small>Mobile</small><br/>(213) 428-74-13</p>
-                            <p><small>Email</small><br/>alex@domain.com</p>
-                            <p><small>Address</small><br/>123 45 Street San Francisco, CA, USA</p>                                   
-                        </div>
-                    </div>                                
-                </div>
-                <!-- END CONTACT ITEM -->
-            </div>                        
+            </div>                 
         </div>
         <div class="row">
             <div class="col-md-12">
