--- a/ERecruteApp-front/src/app/add-profil/add-profil.component.html
+++ b/ERecruteApp-front/src/app/add-profil/add-profil.component.html
@@ -131,7 +131,7 @@
                             <div class="form-group">
                                   <label class="col-md-2 control-label">Photo</label>
                                   <div class="col-md-6">
-                                    <input required ngModel type="text" class="form-control" name="photo"
+                                    <input required ngModel type="file" accept="image/*"  class="form-control" name="photo"
                                          placeholder="photo " [(ngModel)]="profil.photo" />
                                          
                             <!--<button [disabled]="!f.valid" type="submit"  class="btn btn-success" >Create</button>-->
@@ -181,13 +181,83 @@
                                 <div class="col-md-10">
                                     <textarea required ngModel class="form-control" rows="5"
                                     name="details" [(ngModel)]="formation.details"></textarea>
-                                    <button  type="submit"  class="btn btn-success"  >Create</button>
+                                    <button [disabled]="!f.valid"  type="submit"  class="btn btn-success"  >Create</button>
                                  
                                 </div>
                             </div>
                           
                         </div>
-                        <div id="step-8">
+                        <div id="step-9">
+                                <div class="form-group">
+                                        <ng-multiselect-dropdown class="col-md-4"
+                                        [placeholder]="'Choisir competence'"
+                                        [data]="dlcompetence"
+                                        name="competence"
+                                        #role="ngModel"
+                                        [(ngModel)]="sIcompetence"
+                                        [settings]="dropdownSettings"
+                                        (onSelect)="onIS($event)"
+                                        (onSelectAll)="onSA($event)"
+                                      >
+                                      </ng-multiselect-dropdown>
+                                      <ng-multiselect-dropdown class="col-md-4"
+                                        [placeholder]="'Choisir langues'"
+                                        [data]="dllangue"
+                                        name="langues"
+                                        #role="ngModel"
+                                        [(ngModel)]="sIlangue"
+                                        [settings]="dropdownSettings"
+                                        (onSelect)="onIS($event)"
+                                        (onSelectAll)="onSA($event)"
+                                      >
+                                      </ng-multiselect-dropdown>
+                                      <ng-multiselect-dropdown class="col-md-4"
+                                        [placeholder]="'Choisir Secteur Activite'"
+                                        [data]="dlsecteurActivite"
+                                        name="Secteur Activite"
+                                        #role="ngModel"
+                                        [(ngModel)]="sIsecteurActivite"
+                                        [settings]="dropdownSettings"
+                                        (onSelect)="onIS($event)"
+                                        (onSelectAll)="onSA($event)"
+                                      >
+                                      </ng-multiselect-dropdown>
+                                      <div class="col-md-12"></div>
+                                      <ng-multiselect-dropdown class="col-md-4"
+                                        [placeholder]="'Choisir Situation Familiale'"
+                                        [data]="dlsituationFamiliale"
+                                        name="Situation Familiale"
+                                        #role="ngModel"
+                                        [(ngModel)]="sIsituationFamiliale"
+                                        [settings]="dropdownSettings"
+                                        (onSelect)="onIS($event)"
+                                        (onSelectAll)="onSA($event)"
+                                      >
+                                      </ng-multiselect-dropdown>
+                                      <ng-multiselect-dropdown class="col-md-4"
+                                        [placeholder]="'Choisir Type Contrat'"
+                                        [data]="dltypeContrat"
+                                        name="Type Contrat"
+                                        #role="ngModel"
+                                        [(ngModel)]="sItypeContrat"
+                                        [settings]="dropdownSettings"
+                                        (onSelect)="onIS($event)"
+                                        (onSelectAll)="onSA($event)"
+                                      >
+                                      </ng-multiselect-dropdown>
+                                      <ng-multiselect-dropdown class="col-md-4"
+                                        [placeholder]="'Choisir Type Profil'"
+                                        [data]="dltypeProfil"
+                                        name="Type Profil"
+                                        #role="ngModel"
+                                        [(ngModel)]="sItypeProfil"
+                                        [settings]="dropdownSettings"
+                                        (onSelect)="onIS($event)"
+                                        (onSelectAll)="onSA($event)"
+                                      >
+                                      </ng-multiselect-dropdown>
+                                      <div class="col-md-12"></div>
+                                </div>
                          </div>   
                     </div>
                    </form> 
