--- a/ERecruteApp-front/src/app/profil/profil.component.html
+++ b/ERecruteApp-front/src/app/profil/profil.component.html
@@ -21,7 +21,7 @@
                                     </div>
                                 </div>
                                 <div class="col-md-4">
-                                    <button routerLink="/nv-user" class="btn btn-success btn-block"><span class="fa fa-plus"></span> Add new profil</button>
+                                    <button href="/addProfil" class="btn btn-success btn-block"><span class="fa fa-plus"></span> Add new profil</button>
                                 </div>
                             </div>
                         </form>                                    
@@ -31,21 +31,21 @@
             </div>
         </div>
         
-        <div class="row" *ngFor="let profil of Profil">
-            <div class="col-md-3">
+        <div class="row" > 
+            <div class="col-md-3" *ngFor="let profil of Profil">
                 <!-- CONTACT ITEM -->
                 <div class="panel panel-default">
                     <div class="panel-body profile">
                         <div class="profile-image">
-                            <img src="assets/images/users/user3.jpg" alt="{{profil.nom}} {{profil.prenom}}"/>
+                            <img src="{{profil.photo}}" alt="{{profil.nom}} {{profil.prenom}}"/>
                         </div>
                         <div class="profile-data">
                             <div class="profile-data-name">{{profil.nom}} {{profil.prenom}}</div>
                             <div class="profile-data-title">Singer-Songwriter</div>
                         </div>
                         <div class="profile-controls">
-                            <a href="#" class="profile-control-left"><span class="fa fa-info"></span></a>
-                            <a href="#" class="profile-control-right"><span class="fa fa-phone"></span></a>
+                            <a href="#" class="profile-control-left"><span class="fa fa-pencil"></span></a>
+                            <a href="#" class="profile-control-right"><span class="fa fa-times"></span></a>
                         </div>
                     </div>                                
                     <div class="panel-body">                                    
