--- a/ERecruteApp-front/src/app/sidebar/sidebar.component.html
+++ b/ERecruteApp-front/src/app/sidebar/sidebar.component.html
@@ -51,7 +51,7 @@
                 <a href="#"><span class="fa fa-files-o"></span> <span class="xn-text">Profils</span></a>
                 <ul>
                     <li><a routerLink="/profil">Liste Profils</a></li>
-                    <li><a routerLink="/addProfil">Nouveau Profil</a></li>
+                    <li><a href="/addProfil">Nouveau Profil</a></li>
                     <li><a href="importer-profiles.html">Importer Profils</a></li>
                 </ul>
         </li>
@@ -70,8 +70,8 @@
         <li class="xn-openable">
             <a href="#"><span class="fa fa-file-text-o"></span> <span class="xn-text">CVthèque</span></a>
             <ul>
-                <li><a href="cvs.html">Liste CVs</a></li>
-                <li><a href="nv-cv.html">Création CV</a></li>
+                <li><a routerLink="/cvtheque">Liste CVs</a></li>
+                <li><a routerLink="/cvtheque">Création CV</a></li>
             </ul>
         </li>
         
