--- a/ERecruteApp-front/src/app/add-profil/add-profil.component.html
+++ b/ERecruteApp-front/src/app/add-profil/add-profil.component.html
@@ -222,7 +222,8 @@
                                         (onSelectAll)="onSA($event)"
                                       >
                                       </ng-multiselect-dropdown>
-                                      <div class="col-md-12"></div>
+                                </div>
+                                <div class="form-group">
                                       <ng-multiselect-dropdown class="col-md-4"
                                         [placeholder]="'Choisir Situation Familiale'"
                                         [data]="dlsituationFamiliale"
@@ -256,10 +257,15 @@
                                         (onSelectAll)="onSA($event)"
                                       >
                                       </ng-multiselect-dropdown>
-                                      <div class="col-md-12"></div>
                                 </div>
+                                <div class="form-group"><p></p></div>
+                                <div class="form-group"><p></p></div>
+                                <div class="form-group"><p></p></div>
+                                <div class="form-group"><p></p></div>
+                                <div class="form-group"><p></p></div>
+                                <div class="form-group"><p></p></div>
+                            </div>
                          </div>   
-                    </div>
                    </form> 
             </div>
             <!-- END WIZARD WITH VALIDATION -->
