--- a/ERecruteApp-front/src/app/profil/profil.component.html
+++ b/ERecruteApp-front/src/app/profil/profil.component.html
@@ -44,7 +44,7 @@
                             <div class="profile-data-title">Singer-Songwriter</div>
                         </div>
                         <div class="profile-controls">
-                            <a href="#" class="profile-control-left"><span class="fa fa-pencil"></span></a>
+                            <a [routerLink]="['/cvtheque', profil.codeProfil]" class="profile-control-left">CV</a>
                             <a href="#" class="profile-control-right"><span class="fa fa-times"></span></a>
                         </div>
                     </div>                                
